# phantom_state

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MCP_IMPLEMENTATION.md  MCP_USAGE.md  PHANTOM_SCRIBE_INTEGRATION.md  PHANTOM_SCRIBE_README.md  README.md  UV_SETUP.md  mcp_config.example.json  mcp_config.uv.example.json  phantom_state.config.example.json  phantom_state_spec.md  pyproject.toml  requirements.txt  test_mcp_server.py
examples/: basic_dialogue.py  mcp_client_example.py
scripts/: enhance_phantom_scribe.py
src/phantom_state/: __init__.py  embedding.py  engine.py  mcp.py  models.py  queries.py  schema.sql
tests/: __init__.py  conftest.py  test_branching.py  test_embedding.py  test_queries.py  test_schema.py  test_two_agents.py
