[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom_state"
version = "0.1.0"
description = "Narrative state engine for multi-agent dialogue generation with bounded character knowledge"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.2.0",
    "mcp>=0.9.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "phantom_state[openai]",
    "phantom_state[dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
phantom-state-mcp = "phantom_state.mcp:main"

[tool.setuptools.package-data]
phantom_state = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
